feat: Add Jira and Confluence integration with CI/CD support
- Add JiraClient and JiraConfig for Jira REST API integration
- Add ConfluenceClient for Confluence page creation
- Add JiraTestListener for auto-creating defects on test failures
- Add JiraDefectCreator and ConfluenceReportPublisher for CI pipeline
- Add JiraApiTests and ConfluenceApiTests for API validation
- Update Jenkinsfile with defect creation and Confluence publishing stages
- Add jira-config.properties.example template (credentials excluded)